--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
     "@types/node": "^16.4.13",
+    "bootstrap": "^5.0.2",
     "express": "^4.17.1",
-    "msnodesqlv8": "^2.2.0"
+    "msnodesqlv8": "^2.2.0",
+    "next": "11.0.1",
+    "prettier": "^2.3.2",
+    "react": "17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
