取消转生,改换成最大等级4000

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,18 @@
 {
-  "extends": ["next", "next/core-web-vitals"]
+  "extends": [
+    "next",
+    "next/core-web-vitals"
+  ],
+  "overrides": [
+    {
+      "files": [
+        "*-test.js",
+        "*.spec.js",
+        "*.js"
+      ],
+      "rules": {
+        "react/no-unescaped-entities": "off"
+      }
+    }
+  ]
 }
