--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 80",
     "build": "next build",
     "start": "next start --port 80",
     "lint": "next lint"
@@ -12,6 +12,7 @@
     "@types/node": "^16.4.13",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "cookie": "^0.4.1",
     "express": "^4.17.1",
     "msnodesqlv8": "^2.2.0",
     "next": "11.0.1",
